<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recommendationFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecommendationFragment">

    <Button
        android:id="@+id/readLastBookButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_unselected"
        android:text="@string/read"
        android:textAllCaps="false"
        android:textColor="@color/black_adaptive"
        app:layout_constraintBottom_toBottomOf="@+id/authorOfLastBookTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameOfLastBookTextView"
        app:layout_constraintTop_toTopOf="@+id/nameOfLastBookTextView"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/nameOfLastBookTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_adaptive"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueReadingTextView"
        app:layout_constraintWidth_percent="0.6"
        tools:text="Название книги" />

    <TextView
        android:id="@+id/authorOfLastBookTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black_adaptive"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfLastBookTextView"
        app:layout_constraintWidth_percent="0.6"
        tools:text="Автор книги" />

    <TextView
        android:id="@+id/continueReadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continue_reading"
        android:textColor="@color/black_adaptive"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recommendationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/recommendation"
        android:textColor="@color/black_adaptive"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorOfLastBookTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendationRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendationTextView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/lastBookGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="readLastBookButton,nameOfLastBookTextView,authorOfLastBookTextView,continueReadingTextView"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="690dp" />

</androidx.constraintlayout.widget.ConstraintLayout>